objects/ssot__Program__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActiveEnrolleeCount__c</fullName>
        <label>Active Enrollee Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentMonthDisbCount__c</fullName>
        <label>Current Month Disbursed Count</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentYearDisbCount__c</fullName>
        <label>Current Year Disbursed Count</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Program Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentProgramId__c</fullName>
        <label>Parent Program</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreviousMonthDisbCount__c</fullName>
        <label>Previous Month Disbursed Count</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PreviousYearDisbCount__c</fullName>
        <label>Previous Year Disbursed Count</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProgramStatus__c</fullName>
        <label>Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Summary__c</fullName>
        <label>Summary</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalEnrolleeCount__c</fullName>
        <label>Total Enrollee Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716668772718_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program_ParentProgramId_map_Program__rel</label>
        <referenceTo>ssot__Program__dlm</referenceTo>
        <relationshipLabel>Program_ParentProgramId_map_Program__rel</relationshipLabel>
        <relationshipName>rel_1716668772718_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>